// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Input Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jqwtzG"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMIWHa sc-jgrJph jaaZuO sc-gSQFLo kimdWC"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jqwtzG"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMIWHa sc-jgrJph eVNsmB sc-gSQFLo kimdWC"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jqwtzG"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMIWHa sc-jgrJph jYoOjT sc-gSQFLo kimdWC"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Input With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 jqwtzG"
    >
      <input
        autocomplete="off"
        class="StyledTextInput-sc-1x30a0s-0 bMIWHa sc-jgrJph jaaZuO sc-gSQFLo kimdWC"
        placeholder="This is a placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;
